--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,21 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.org/knitr/},
 }
+
+@article{liang1986longitudinal,
+  title={Longitudinal data analysis using generalized linear models},
+  author={Liang, Kung-Yee and Zeger, Scott L},
+  journal={Biometrika},
+  volume={73},
+  number={1},
+  pages={13--22},
+  year={1986},
+  publisher={Oxford University Press}
+}
+
+@book{hardin2002generalized,
+  title={Generalized Estimating Equations},
+  author={Hardin, James W and Hilbe, Joseph M},
+  year={2002},
+  publisher={Chapman and Hall/CRC}
+}
